# live-schedule-api

./: .gitignore  CREATE_TEST_USER.md  DATABASE_SCHEMA.md  DATABASE_TYPES_GUIDE.md  DEBUG_GUIDE.md  NOTION_UI_STEPS.md  README.md  TESTING_GUIDE.md  デプロイ完全ガイド.md  認証とアクセス制御の説明.md
backend/: .dockerignore  AUTH_VERIFICATION_REPORT.md  Cargo.toml  DATA_PERSISTENCE_EXPLANATION.md  DATA_PROTECTION_PLAN.md  DISASTER_RECOVERY.md  Dockerfile  Fly.ioデプロイ手順.md  MEMORY_ANALYSIS.md  MIGRATION_TO_SINGAPORE.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READINESS.md  REGION_SWITCHING_GUIDE.md  TESTING_GUIDE.md  TESTING_SETUP.md  fly.toml  fly.toml.backup  ローカル開発環境設定.md
backend/aws-migration/: 01-overview.md  02-preparation.md  03-aws-setup.md  04-application-migration.md  05-switchover.md  06-cost-estimate.md  README.md
backend/data/: app.db.backup  app.db.backup.20260101_011719  app.db.backup.20260102_133208  app.db.backup.20260102_135006  app.db.backup.20260102_135235  app.db.backup.20260102_135836  app.db.tokyo  database.db.production  production.db.backup.20260103_003227  production.db.backup.20260103_012103  production.db.backup.20260103_012941  production.db.backup.20260103_100632  production.db.backup.20260103_105526  production.db.backup.20260103_124124  production.db.backup.20260103_124733  production.db.backup.20260103_125636  production.db.backup.20260104_142343  production.db.backup.20260104_143643  production.db.backup.20260106_190658  production.db.backup.20260110_133221  production.db.backup.20260110_133458  production.db.backup.20260111_011120
backend/deploy/: CHECKLIST.md  (+1 more)
(+130 files in other folders)
